--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+body{
+	background-color:skyblue;
+}
+h1{
+	text-align: center;
+	color:darkgray;
+}
+
 #photos{
 	line-height:0;
 	-webkit-column-count: 5;
