Added jQuery to change color of navbar on scroll

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,18 @@ h1{
 	height: auto !important;
 }
 
+/*.navbar{*/
+	/*-webkit-transition: all 0.6s ease-out;*/
+	/*-moz-transition: all 0.6s ease-out;*/
+	/*-o-transition: all 0.6s ease-out;*/
+	/*transition: all 0.6s ease-out;*/
+/*}*/
+
+/*.navbar .scrolled{*/
+	/*background: rgb(68, 68, 68);*/
+	/*background: rgba(0, 0, 0, 0.78);*/
+/*}*/
+
 @media(max-width: 1200px){
 	#photos{
 		-moz-column-count: 4;
