--- a/css/main.css
+++ b/css/main.css
@@ -23,3 +23,13 @@ ul li{
 a{
 	text-decoration: none;
 }
+/*this is where the tutorial starts*/
+#overlay{
+	background:rgba(0, 0, 0, 0.7);
+	width:100%;
+	height:100%;
+	position: absolute;
+	top:0;
+	left:0;
+	display: none;
+}
