--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,10 @@ button:hover{
 	width: 100% !important;
 	height: auto !important;
 }
+footer{
+	background-color:yellow;
+	color:black;
+}
 
 @media(max-width: 1200px){
 	#photos{
